updated form submit to return to main page after submitting

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                   required
                   autocomplete="email" placeholder="example@example.com"
                       />
+                <input type="hidden" name="_next" value="https://bc464.github.io/website2024/index.html"
             </div>
             <div class="box flex">
               <div class="message-text">
